--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <title>Calculator app</title>
 
   <link rel="stylesheet" href="css/style.css">
+  <script src="js/script.js" defer></script>
 </head>
 <body>
 
