updated input numbers event listener

--- a/index.html
+++ b/index.html
@@ -30,24 +30,25 @@
     </header>
 
     <div class="display">
-      399,981
+      <div class="previous-operand">100</div>
+      <div class="current-operand">0</div>
     </div>
 
     <div class="inputs">
-      <button class="input-button" value="7">7</button>
-      <button class="input-button" value="8">8</button>
-      <button class="input-button" value="9">9</button>
+      <button class="input-button input-number" value="7">7</button>
+      <button class="input-button input-number" value="8">8</button>
+      <button class="input-button input-number" value="9">9</button>
       <button class="input-button" id="delete">DEL</button>
-      <button class="input-button" value="4">4</button>
-      <button class="input-button" value="5">5</button>
-      <button class="input-button" value="6">6</button>
+      <button class="input-button input-number" value="4">4</button>
+      <button class="input-button input-number" value="5">5</button>
+      <button class="input-button input-number" value="6">6</button>
       <button class="input-button" id="add">+</button>
-      <button class="input-button" value="1">1</button>
-      <button class="input-button" value="2">2</button>
-      <button class="input-button" value="3">3</button>
+      <button class="input-button input-number" value="1">1</button>
+      <button class="input-button input-number" value="2">2</button>
+      <button class="input-button input-number" value="3">3</button>
       <button class="input-button" id="subtract">-</button>
       <button class="input-button" id="decimal">.</button>
-      <button class="input-button" value="0">0</button>
+      <button class="input-button input-number" value="0">0</button>
       <button class="input-button" id="divide">/</button>
       <button class="input-button" id="multiply">x</button>
       <button class="input-button" id="reset">RESET</button>
